# OrderManagementWebsite

./: .gitignore  README.md  previous_finish_predictor.py  pyproject.toml  race_predictor.py
src/fastf1_race_predictor/: __init__.py  cli.py  predictor.py
