[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastf1-race-predictor"
version = "0.1.0"
description = "Formula 1 race outcome predictor powered by FastF1 session data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cursor AI", email = "team@cursor.com" }
]
license = { text = "MIT" }
dependencies = [
    "fastf1>=3.6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[project.scripts]
fastf1-race-predictor = "fastf1_race_predictor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
